--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,6 @@ x86/
 [Aa][Rr][Mm]64/
 bld/
 [Bb]in/
-[Oo]bj/
-[Oo]ut/
-[Ll]og/
-[Ll]ogs/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -361,3 +357,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/Lib/assimp/target
+/Lib/Product
+/Lib/assimp/contrib/zlib/zlibstatic.dir
